study/K8S/wp-fullset/wp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: wp-deploy
